Hunt Showdown game rule update

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -214,6 +214,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod SHIFT, L, exec, hyprlock
 bind = $mainMod SHIFT, BACKSPACE, exec, wlogout 
 bind = $mainMod, I, exec, brave
+bind = , PRINT, exec, hyprshot -m region -o ~/Pictures/Screenshots
 
 # Move focus with mainMod + vim keys
 bind = $mainMod, H, movefocus, l
@@ -313,6 +314,9 @@ windowrulev2 = immediate, class:^(steam_app_2215430)$
 ##Elden ring
 windowrulev2 = immediate, class:^(steam_app_1245620)$
 windowrulev2 = fullscreen, class:^(steam_app_1245620)$
+##HUNT: SHOWDOWN
+windowrulev2 = immediate, class:^(steam_app_594650)$
+
 
 
 #######################
