--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -118,8 +118,10 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 8
+        passes = 2
+
+        ignore_opacity = false
 
         vibrancy = 0.1696
     }
