key binds update

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -213,7 +213,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
 # Custom binds
-bind = $mainMod SHIFT, L, exec, hyprlock
+bind = , Scroll_Lock, exec, hyprlock
 bind = $mainMod SHIFT, BACKSPACE, exec, wlogout 
 bind = $mainMod, I, exec, brave
 bind = , PRINT, exec, hyprshot -m region -o ~/Pictures/Screenshots
