add wlogout menu to one button

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -12,7 +12,7 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
-bind = , Scroll_Lock, exec, hyprlock
+bind = , Scroll_Lock, exec, wlogout
 bind = $mainMod, I, exec, brave
 
 bind = , PRINT, exec, hyprshot -m region -o ~/Pictures/Screenshots
