improve status bar visibility

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/mars/.wallpapers/lofi.jpg
-wallpaper = , /home/mars/.wallpapers/lofi.jpg
+preload = /home/mars/.wallpapers/unix.jpg
+wallpaper = , /home/mars/.wallpapers/unix.jpg
