--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,6 +1,6 @@
 background {
     monitor = HDMI-A-1
-    path = /home/mars/.wallpapers/lofi.jpg   # supports png, jpg, webp (no animations, though)
+    path = /home/mars/.wallpapers/unix.jpg   # supports png, jpg, webp (no animations, though)
     color = rgba(25, 20, 20, 1.0)
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
