--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,7 +6,6 @@
 monitor=DP-3,1920x1080@59.94Hz,0x0,1
 monitor=HDMI-A-1,1920x1080@74.97Hz,1920x0,1
 
-
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -32,6 +31,8 @@ exec-once = dunst
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = notify-send "Timeshift" "--check reminder" 
 exec-once = protonvpn-app
+exec-once = uwsm app -- openrgb --profile blue.orp
+exec-once = uwsm app -- timeshift --check
 
 #############################
 ### ENVIRONMENT VARIABLES ###
