--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -39,3 +39,5 @@ windowrulev2 = immediate, class:^(steam_app_1245620)$
 windowrulev2 = fullscreen, class:^(steam_app_1245620)$
 ##HUNT: SHOWDOWN
 windowrulev2 = immediate, class:^(steam_app_594650)$
+##STAR WARS Jedi: Fallen Order
+windowrulev2 = immediate, class:^(steam_app_1172380)$
