add ejs parser and minor changes

--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -41,3 +41,6 @@ windowrulev2 = fullscreen, class:^(steam_app_1245620)$
 windowrulev2 = immediate, class:^(steam_app_594650)$
 ##STAR WARS Jedi: Fallen Order
 windowrulev2 = immediate, class:^(steam_app_1172380)$
+##Terraria
+windowrulev2 = immediate, class:^(Terraria.bin.x86_64)$
+windowrulev2 = fullscreen, class:^(Terraria.bin.x86_64)$
